--- a/EAMIS.MicroSrvc/EAMIS.Core/EAMIS.Core.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.Core/EAMIS.Core.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="5.5.2" />
     <PackageReference Include="LinqKit" Version="1.1.24" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
