--- a/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
     <PackageReference Include="Autofac" Version="6.2.0" />
+    <PackageReference Include="EPPlus" Version="5.5.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
