COMMITTED BY ROMMEL

--- a/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\EAMIS.Core\EAMIS.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="StaticFiles\Uploaded\Excel\" />
+  </ItemGroup>
+
 </Project>
