--- a/EAMIS.MicroSrvc/EAMIS.Common/EAMIS.Common.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.Common/EAMIS.Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="5.5.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
