updates on depreciation, static files location, upload multiple images

--- a/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <Folder Include="StaticFiles\Uploaded\Excel\" />
+    <Folder Include="StaticFiles\Uploaded\PropertyImages\" />
+    <Folder Include="wwwroot\StaticFiles\Uploaded\Excel\" />
   </ItemGroup>
 
 </Project>
