--- a/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\StaticFiles\**" />
+    <Content Remove="wwwroot\StaticFiles\**" />
+    <EmbeddedResource Remove="wwwroot\StaticFiles\**" />
+    <EntityDeploy Remove="wwwroot\StaticFiles\**" />
+    <None Remove="wwwroot\StaticFiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
     <PackageReference Include="Autofac" Version="6.2.0" />
     <PackageReference Include="EPPlus" Version="5.5.2" />
@@ -29,9 +37,6 @@
 
   <ItemGroup>
     <Folder Include="StaticFiles\Uploaded\Excel\" />
-    <Folder Include="wwwroot\StaticFiles\EAMIS_Attached_Files\Delivery_Receipt\08232022\" />
-    <Folder Include="wwwroot\StaticFiles\Uploaded\Excel\" />
-    <Folder Include="wwwroot\StaticFiles\Uploaded\PropertyImages\" />
   </ItemGroup>
 
 </Project>
