Committed by rommel

--- a/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
+++ b/EAMIS.MicroSrvc/EAMIS.WebApi/EAMIS.WebApi.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="StaticFiles\Uploaded\Excel\" />
+    <Folder Include="wwwroot\StaticFiles\Uploaded\Excel\" />
     <Folder Include="wwwroot\StaticFiles\Uploaded\PropertyImages\" />
   </ItemGroup>
 
